--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ requests==2.32.3
 beautifulsoup4==4.12.3
 neo4j==5.23.1
 pandas==2.2.2
+plotly==6.0.1
+deep-translator==1.1.4
+quads~=1.1.0
+numpy~=1.24.2
